# pkgutil-resolve-name

./: README.rst  pkgutil_resolve_name.py  pyproject.toml
